--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 	
 	window.onload = function() {
 		window.barGraph = new Chart(barGraph).Bar(barGraphData, graphOptions);
-		window.doughnutGraph = new Chart(doughnutGraph).Bar(doughnutGraphData, graphOptions);
+		window.doughnutGraph = new Chart(doughnutGraph).Doughnut(doughnutGraphData, graphOptions);
 		window.lineGraph = new Chart(lineGraph).Bar(lineGraphData, graphOptions);
 		window.pieGraph = new Chart(pieGraph).Bar(pieGraphData, graphOptions);
 		window.polarAreaGraph = new Chart(polarAreaGraph).Bar(polarAreaGraphData, graphOptions);
