--- a/index.html
+++ b/index.html
@@ -439,10 +439,10 @@
 	window.onload = function() {
 		window.barGraph = new Chart(barGraph).Bar(barGraphData, graphOptions);
 		window.doughnutGraph = new Chart(doughnutGraph).Doughnut(doughnutGraphData, graphOptions);
-		window.lineGraph = new Chart(lineGraph).Bar(lineGraphData, graphOptions);
-		window.pieGraph = new Chart(pieGraph).Bar(pieGraphData, graphOptions);
-		window.polarAreaGraph = new Chart(polarAreaGraph).Bar(polarAreaGraphData, graphOptions);
-		window.radarGraph = new Chart(radarGraph).Bar(radarGraphData, graphOptions);
+		window.lineGraph = new Chart(lineGraph).Line(lineGraphData, graphOptions);
+		window.pieGraph = new Chart(pieGraph).Pie(pieGraphData, graphOptions);
+		window.polarAreaGraph = new Chart(polarAreaGraph).PolarArea(polarAreaGraphData, graphOptions);
+		window.radarGraph = new Chart(radarGraph).Radar(radarGraphData, graphOptions);
 	}
 
     </script>
