--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	      }
 	  ]
 	
-	  var lineChartData = {
+	  var lineGraphData = {
 	      labels : ["January","February","March","April","May","June","July"],
 	      datasets : [
 	          {
