--- a/index.html
+++ b/index.html
@@ -22,32 +22,32 @@
     <section class="main-content">
       <h3>
 <a id="bar-graph" class="anchor" href="#bar-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bar Graph</h3>
-		<div style="max-width: 50%">
+		<div style="width: 50%">
 			<canvas id="bar-graph-canvas"></canvas>
 		</div>
 <h3>
 <a id="doughnut-graph" class="anchor" href="#doughnut-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Doughnut Graph</h3>
-		<div style="max-width: 50%">
+		<div style="width: 50%">
 			<canvas id="doughnut-graph-canvas"></canvas>
 		</div>
 <h3>
 <a id="line-graph" class="anchor" href="#line-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Line Graph</h3>
-		<div style="max-width: 50%">
+		<div style="width: 50%">
 			<canvas id="line-graph-canvas"></canvas>
 		</div>
 <h3>
 <a id="pie-graph" class="anchor" href="#pie-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pie Graph</h3>
-		<div style="max-width: 50%">
+		<div style="width: 50%">
 			<canvas id="pie-graph-canvas"></canvas>
 		</div>
 <h3>
 <a id="polar-area-graph" class="anchor" href="#polar-area-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Polar Area Graph</h3>
-		<div style="max-width: 50%">
+		<div style="width: 50%">
 			<canvas id="polar-area-graph-canvas"></canvas>
 		</div>
 <h3>
 <a id="radar-graph" class="anchor" href="#radar-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Radar Graph</h3>
-		<div style="max-width: 50%">
+		<div style="width: 50%">
 			<canvas id="radar-graph-canvas"></canvas>
 		</div>
       <footer class="site-footer">
