--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">chart-js-examples</h1>
-      <h2 class="project-tagline">Graph examples from <a style="color: white;" href=http://www.chartjs.org/>ChartJS</a></h2>
+      <h2 class="project-tagline">A collection of ChartJS examples by David J Pfeiffer</h2>
       <a href="https://github.com/davidjpfeiffer/chart-js-examples" class="btn">View on GitHub</a>
+      <a href="http://www.chartjs.org/docs">Learn More</a>
       <a href="https://github.com/davidjpfeiffer/chart-js-examples/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/davidjpfeiffer/chart-js-examples/tarball/master" class="btn">Download .tar.gz</a>
     </section>
