--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="project-name">chart-js-examples</h1>
       <h2 class="project-tagline">A collection of ChartJS examples by David J Pfeiffer</h2>
       <a href="https://github.com/davidjpfeiffer/chart-js-examples" class="btn">View on GitHub</a>
-      <a href="http://www.chartjs.org/docs">Learn More</a>
+      <a href="http://www.chartjs.org/docs" class="btn">Learn More</a>
       <a href="https://github.com/davidjpfeiffer/chart-js-examples/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/davidjpfeiffer/chart-js-examples/tarball/master" class="btn">Download .tar.gz</a>
     </section>
