--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
       <h2 class="project-tagline">A collection of ChartJS examples by David J Pfeiffer</h2>
       <a href="https://github.com/davidjpfeiffer/chart-js-examples" class="btn">View on GitHub</a>
       <a href="http://www.chartjs.org/docs" class="btn">Learn More</a>
-      <a href="https://github.com/davidjpfeiffer/chart-js-examples/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/davidjpfeiffer/chart-js-examples/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/davidjpfeiffer/chart-js-examples/zipball/master" class="btn">Download Zip</a>
     </section>
     <section class="main-content">
         <h3><a id="bar-graph" class="anchor" href="#bar-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bar Graph</h3>
