--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>chart-js-examples by davidjpfeiffer</title>
+    <title>Chart JS Examples</title>
+    <description>A collection of Chart JS examples curated by David J Pfeiffer</description>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -14,7 +15,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">chart-js-examples</h1>
-      <h2 class="project-tagline">A collection of Chart JS examples by David J Pfeiffer</h2>
+      <h2 class="project-tagline">A collection of Chart JS examples curated by David J Pfeiffer</h2>
       <a href="https://github.com/davidjpfeiffer/chart-js-examples" class="btn">View on GitHub</a>
       <a href="http://www.chartjs.org/docs" class="btn">Learn More</a>
       <a href="https://github.com/davidjpfeiffer/chart-js-examples/zipball/master" class="btn">Download Zip</a>
