--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">chart-js-examples</h1>
+      <h1 class="project-name">Chart JS Examples</h1>
       <h2 class="project-tagline">A collection of Chart JS examples curated by David J Pfeiffer</h2>
       <a href="https://github.com/davidjpfeiffer/chart-js-examples" class="btn">View on GitHub</a>
       <a href="http://www.chartjs.org/docs" class="btn">Learn More</a>
