--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Chart JS Examples</title>
-    <description>A collection of Chart JS examples curated by David J Pfeiffer</description>
+    <meta name="description" content="A collection of Chart JS examples curated by David J Pfeiffer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
