--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <script src="chart.js"></script>
-    <script src="index.js" async></script>
+    <script src="http.service.js"></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <section class="page-header">
