--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <script src="chart.js"></script>
     <script src="http.service.js"></script>
-    <script src="index.js"></script>
+    <script src="index.js" async></script>
   </head>
   <body>
     <section class="page-header">
