Fix breaking changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <script src="chart.js"></script>
-    <script src="http.service.js"></script>
+    <script src="utility.service.js"></script>
     <script src="index.js" async></script>
   </head>
   <body>
@@ -22,22 +22,22 @@
       <a href="https://github.com/davidjpfeiffer/chart-js-examples/zipball/master" class="btn">Download Zip</a>
     </section>
     <section class="main-content">
-        <h3><a id="bar-graph" class="anchor" href="#bar-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bar Graph</h3>
+        <h3><a id="bar-graph" class="anchor" href="#bar-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Bar Graph</span></a></h3>
 	<hr />
 	<canvas id="bar-graph-canvas"></canvas>
-        <h3><a id="doughnut-graph" class="anchor" href="#doughnut-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Doughnut Graph</h3>
+        <h3><a id="doughnut-graph" class="anchor" href="#doughnut-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Doughnut Graph</span></a></h3>
 	<hr />
 	<canvas id="doughnut-graph-canvas"></canvas>
-        <h3><a id="line-graph" class="anchor" href="#line-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Line Graph</h3>
+        <h3><a id="line-graph" class="anchor" href="#line-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Line Graph</span></a></h3>
 	<hr />
 	<canvas id="line-graph-canvas"></canvas>
-        <h3><a id="pie-graph" class="anchor" href="#pie-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pie Graph</h3>
+        <h3><a id="pie-graph" class="anchor" href="#pie-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Pie Graph</span></a></h3>
 	<hr />
 	<canvas id="pie-graph-canvas"></canvas>
-        <h3><a id="polar-area-graph" class="anchor" href="#polar-area-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Polar Area Graph</h3>
+        <h3><a id="polar-area-graph" class="anchor" href="#polar-area-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Polar Area Graph</span></a></h3>
 	<hr />
 	<canvas id="polar-area-graph-canvas"></canvas>
-        <h3><a id="radar-graph" class="anchor" href="#radar-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Radar Graph</h3>
+        <h3><a id="radar-graph" class="anchor" href="#radar-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Radar Graph</span></a></h3>
 	<hr />
 	<canvas id="radar-graph-canvas"></canvas>
         <footer class="site-footer">
