--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Chart JS Examples</title>
     <meta name="description" content="A collection of Chart JS examples curated by David J Pfeiffer">
@@ -12,37 +13,63 @@
     <script src="chart.js"></script>
     <script src="utility.service.js"></script>
     <script src="index.js" async></script>
-  </head>
-  <body>
+</head>
+
+<body>
     <section class="page-header">
-      <h1 class="project-name">Chart JS Examples</h1>
-      <h2 class="project-tagline">A collection of Chart JS examples curated by David J Pfeiffer</h2>
-      <a href="https://github.com/davidjpfeiffer/chart-js-examples" class="btn">View on GitHub</a>
-      <a href="http://www.chartjs.org/docs" class="btn">Learn More</a>
-      <a href="https://github.com/davidjpfeiffer/chart-js-examples/zipball/master" class="btn">Download Zip</a>
+        <h1 class="project-name">Chart JS Examples</h1>
+        <h2 class="project-tagline">A collection of Chart JS examples curated by David J Pfeiffer</h2>
+        <a href="https://github.com/davidjpfeiffer/chart-js-examples" class="btn">View on GitHub</a>
+        <a href="http://www.chartjs.org/docs" class="btn">Learn More</a>
+        <a href="https://github.com/davidjpfeiffer/chart-js-examples/zipball/master" class="btn">Download Zip</a>
     </section>
     <section class="main-content">
-        <h3><a id="bar-graph" class="anchor" href="#bar-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Bar Graph</span></a></h3>
-	<hr />
-	<canvas id="bar-graph-canvas"></canvas>
-        <h3><a id="doughnut-graph" class="anchor" href="#doughnut-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Doughnut Graph</span></a></h3>
-	<hr />
-	<canvas id="doughnut-graph-canvas"></canvas>
-        <h3><a id="line-graph" class="anchor" href="#line-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Line Graph</span></a></h3>
-	<hr />
-	<canvas id="line-graph-canvas"></canvas>
-        <h3><a id="pie-graph" class="anchor" href="#pie-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Pie Graph</span></a></h3>
-	<hr />
-	<canvas id="pie-graph-canvas"></canvas>
-        <h3><a id="polar-area-graph" class="anchor" href="#polar-area-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Polar Area Graph</span></a></h3>
-	<hr />
-	<canvas id="polar-area-graph-canvas"></canvas>
-        <h3><a id="radar-graph" class="anchor" href="#radar-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Radar Graph</span></a></h3>
-	<hr />
-	<canvas id="radar-graph-canvas"></canvas>
+        <div class="chart">
+            <h3 class="chart-header">
+                <a id="bar-chart" class="anchor" href="#bar-chart" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Bar Chart</span></a>
+                <button class="btn">View Code</button>
+            </h3>
+            <canvas id="bar-chart-canvas"></canvas>
+        </div>
+        <div class="chart">
+            <h3 class="chart-header">
+                <a id="doughnut-chart" class="anchor" href="#doughnut-chart" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Doughnut Chart</span></a>
+                <button class="btn">View Code</button>
+            </h3>
+            <canvas id="doughnut-chart-canvas"></canvas>
+        </div>
+        <div class="chart">
+            <h3 class="chart-header">
+                <a id="line-chart" class="anchor" href="#line-chart" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Line Chart</span></a>
+                <button class="btn">View Code</button>
+            </h3>
+            <canvas id="line-chart-canvas"></canvas>
+        </div>
+        <div class="chart">
+            <h3 class="chart-header">
+                <a id="pie-chart" class="anchor" href="#pie-chart" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Pie Chart</span></a>
+                <button class="btn">View Code</button>
+            </h3>
+            <canvas id="pie-chart-canvas"></canvas>
+        </div>
+        <div class="chart">
+            <h3 class="chart-header">
+                <a id="polar-area-chart" class="anchor" href="#polar-area-chart" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Polar Area Chart</span></a>
+                <button class="btn">View Code</button>
+            </h3>
+            <canvas id="polar-area-chart-canvas"></canvas>
+        </div>
+        <div class="chart">
+            <h3 class="chart-header">
+                <a id="radar-chart" class="anchor" href="#radar-chart" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Radar Chart</span></a>
+                <button class="btn">View Code</button>
+            </h3>
+            <canvas id="radar-chart-canvas"></canvas>
+        </div>
         <footer class="site-footer">
             <span class="site-footer-owner"><a href="https://github.com/davidjpfeiffer/chart-js-examples">chart-js-examples</a> created by <a href="https://github.com/davidjpfeiffer">davidjpfeiffer</a>.</span>
         </footer>
     </section>
-  </body>
+</body>
+
 </html>
