--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Chart JS Examples</title>
   <meta name="description" content="A collection of Chart JS examples curated by David J Pfeiffer">
-  <meta name="keywords" content="GitHub, GitHub Pages, GitHub Pages template, website template, template">
-  <title>GitHub Pages Template</title>
+  <meta name="keywords" content="ChartJS examples, Chart JS examples, ChartJS, Chart JS, examples">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -15,9 +15,6 @@
   <!--endbuild-->
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-  <!--build:js scripts/scripts.min.js inline-->
-  <script src="scripts/scripts.js"></script>
-  <!--endbuild-->
   <script src="https://use.fontawesome.com/4711cc442d.js"></script>
 </head>
 
@@ -31,66 +28,106 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <a class="navbar-brand" href="#">GitHub Pages Template</a>
+        <a class="navbar-brand" href="#">Chart JS Examples</a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="https://github.com/davidjpfeiffer/gh-pages-template">View on GitHub</a></li>
-          <li><a href="https://github.com/davidjpfeiffer/gh-pages-template/zipball/master">Download Zip</a></li>
+          <li><a href="https://github.com/davidjpfeiffer/chart-js-examples">View on GitHub</a></li>
+          <li><a href="https://github.com/davidjpfeiffer/chart-js-examples/zipball/master">Download Zip</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <header>
-    <h1>GitHub Pages Template</h1>
-    <p>A simple, customizable, and free GitHub Pages template</p>
-    <a href="https://github.com/davidjpfeiffer/gh-pages-template" class="btn btn-primary btn-lg">View on GitHub</a>
-    <a href="https://github.com/davidjpfeiffer/gh-pages-template/zipball/master" class="btn btn-primary btn-lg">Download Zip</a>
+    <h1>Chart JS Examples</h1>
+    <p>A collection of Chart JS examples curated by David J Pfeiffer</p>
+    <a href="https://github.com/davidjpfeiffer/chart-js-examples" class="btn btn-primary btn-lg">View on GitHub</a>
+    <a href="https://github.com/davidjpfeiffer/chart-js-examples/zipball/master" class="btn btn-primary btn-lg">Download Zip</a>
   </header>
   <main class="container">
-    <div class="jumbotron">
-      <h3><i class="fa fa-info-circle" aria-hidden="true"></i> About</h3>
-      <p>Welcome to your brand new GitHub Pages template! This general purpose template is free to use and can be adapted as a personal website, web application, or can be used to kick-start a new project.</p>
-      <h3><i class="fa fa-star" aria-hidden="true"></i> Features</h3>
-      <p>In addition to a beautiful, simple, and responsive template for your new website, this project comes with a complete build pipeline and development environment. You can make changes to your project, run development and production builds, and deploy to GitHub Pages in seconds.</p>
-      <h3><i class="fa fa-puzzle-piece" aria-hidden="true"></i> Libraries</h3>
-      <p>This project uses Node and Node Package Manager (NPM) to include Gulp, SASS, jQuery, and Bootstrap. All of these technologies are incorperated into your Gulp build pipeline. This makes it easy to start building fast without having to spend time setting up the basic project structure.</p>
-      <h3><i class="fa fa-gavel" aria-hidden="true"></i> License</h3>
-      <p>This project is licensed under the MIT License. You are asked to include an attribution back to this project if you use any of the source code. For more information about that license, click <a href="http://choosealicense.com/licenses/mit/">here</a>.</p>
+    <div class="chart">
+      <div class="chart-header">
+        <h3><a id="bar-chart" class="anchor" href="#bar-chart" aria-hidden="true">Bar Chart</a></h3>
+        <div class="chart-options">
+          <button class="btn btn-default">View Code</button>
+          <button class="btn btn-default js-reload-bar-chart-btn">Reload Data</button>
+        </div>
+      </div>
+      <canvas id="bar-chart-canvas"></canvas>
+    </div>
+    <div class="chart">
+      <h3 class="chart-header">
+        <a id="doughnut-chart" class="anchor" href="#doughnut-chart" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Doughnut Chart</span></a>
+        <button class="btn btn-default">View Code</button>
+        <button class="btn btn-default js-reload-doughnut-chart-btn">Reload Data</button>
+      </h3>
+      <canvas id="doughnut-chart-canvas"></canvas>
+    </div>
+    <div class="chart">
+      <h3 class="chart-header">
+        <a id="line-chart" class="anchor" href="#line-chart" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Line Chart</span></a>
+        <button class="btn btn-default">View Code</button>
+        <button class="btn btn-default js-reload-line-chart-btn">Reload Data</button>
+      </h3>
+      <canvas id="line-chart-canvas"></canvas>
+    </div>
+    <div class="chart">
+      <h3 class="chart-header">
+        <a id="pie-chart" class="anchor" href="#pie-chart" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Pie Chart</span></a>
+        <button class="btn btn-default">View Code</button>
+        <button class="btn btn-default js-reload-pie-chart-btn">Reload Data</button>
+      </h3>
+      <canvas id="pie-chart-canvas"></canvas>
+    </div>
+    <div class="chart">
+      <h3 class="chart-header">
+        <a id="polar-area-chart" class="anchor" href="#polar-area-chart" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Polar Area Chart</span></a>
+        <button class="btn btn-default">View Code</button>
+        <button class="btn btn-default js-reload-polar-area-chart-btn">Reload Data</button>
+      </h3>
+      <canvas id="polar-area-chart-canvas"></canvas>
+    </div>
+    <div class="chart">
+      <h3 class="chart-header">
+        <a id="radar-chart" class="anchor" href="#radar-chart" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link">Radar Chart</span></a>
+        <button class="btn btn-default">View Code</button>
+        <button class="btn btn-default js-reload-radar-chart-btn">Reload Data</button>
+      </h3>
+      <canvas id="radar-chart-canvas"></canvas>
     </div>
   </main>
   <section class="call-to-action">
-    <h5>Like GitHub Pages Template?</h5>
-    <a href="https://github.com/davidjpfeiffer/gh-pages-template" class="btn btn-primary btn-lg">Star it on GitHub</a>
+    <h5>Like Chart JS Examples?</h5>
+    <a href="https://github.com/davidjpfeiffer/chart-js-examples" class="btn btn-primary btn-lg">Star it on GitHub</a>
   </section>
   <footer>
     <div class="container">
       <div class="col-sm-6 col-md-3">
-        <h6>Development</h6>
-        <p><a href="https://nodejs.org/en/">Node JS</a></p>
-        <p><a href="https://www.npmjs.com/">Node Package Manager</a></p>
-        <p><a href="http://gulpjs.com/">Gulp JS</a></p>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <h6>Libraries</h6>
-        <p><a href="http://sass-lang.com/">SASS</a></p>
-        <p><a href="http://getbootstrap.com/">Bootstrap</a></p>
-        <p><a href="https://jquery.com/">jQuery</a></p>
+        <h6>Chart JS</h6>
+        <p><a href="http://www.chartjs.org">Official Project Website</a></p>
+        <p><a href="http://www.chartjs.org/docs">Documentation</a></p>
+        <p><a href="https://github.com/chartjs/Chart.js">Project GitHub Page</a></p>
       </div>
       <div class="col-sm-6 col-md-3">
         <h6>Project</h6>
-        <p><a href="https://github.com/davidjpfeiffer/gh-pages-template">Project GitHub Page</a></p>
-        <p><a href="https://github.com/davidjpfeiffer/gh-pages-template/issues">Report an Issue</a></p>
-        <p><a href="https://github.com/davidjpfeiffer/gh-pages-template#github-pages-template">Help</a></p>
+        <p><a href="https://github.com/davidjpfeiffer/chart-js-examples">Project GitHub Page</a></p>
+        <p><a href="https://github.com/davidjpfeiffer/chart-js-examples/issues">Report an Issue</a></p>
+        <p><a href="https://github.com/davidjpfeiffer/chart-js-examples#getting-started">Getting Started</a></p>
       </div>
       <div class="col-sm-6 col-md-3">
         <h6>Author</h6>
         <p><a href="https://davidjpfeiffer.com">Official Website</a></p>
-        <p><a href="https://davidjpfeiffer.com">GitHub Page</a></p>
-        <p><a href="https://davidjpfeiffer.com">Twitter Account</a></p>
+        <p><a href="https://github.com/davidjpfeiffer">GitHub Page</a></p>
+        <p><a href="https://twitter.com/davidjpfeiffer">Twitter Account</a></p>
       </div>
     </div>
   </footer>
+  <!--build:js scripts/scripts.min.js async-->
+  <script src="scripts/services/utility.service.js"></script>
+  <script src="scripts/services/data.service.js"></script>
+  <script src="scripts/chart.js"></script>
+  <script src="scripts/index.js"></script>
+  <!--endbuild-->
 </body>
 
 </html>
