Added code examples

--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,8 @@
           <h4 class="modal-title" id="bar-chart-code-modal-title">Bar Chart Code</h4>
         </div>
         <div class="modal-body">
-          ...
+          <p>This HTML file can be used with Chart JS to create a fully-functional example of the chart.</p>
+          <script src="https://gist.github.com/davidjpfeiffer/a25d338967cb3bbc1a970b6a79f975d3.js"></script>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -156,7 +157,8 @@
           <h4 class="modal-title" id="doughnut-chart-code-modal-title">Doughnut Chart Code</h4>
         </div>
         <div class="modal-body">
-          ...
+          <p>This HTML file can be used with Chart JS to create a fully-functional example of the chart.</p>
+          <script src="https://gist.github.com/davidjpfeiffer/3c65da91de3bf5896df90d95b87216f4.js"></script>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -172,7 +174,8 @@
           <h4 class="modal-title" id="line-chart-code-modal-title">Line Chart Code</h4>
         </div>
         <div class="modal-body">
-          ...
+          <p>This HTML file can be used with Chart JS to create a fully-functional example of the chart.</p>
+          <script src="https://gist.github.com/davidjpfeiffer/d7d1bedbc8084d14f00a18f23f7b1e4b.js"></script>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -188,7 +191,8 @@
           <h4 class="modal-title" id="pie-chart-code-modal-title">Pie Chart Code</h4>
         </div>
         <div class="modal-body">
-          ...
+          <p>This HTML file can be used with Chart JS to create a fully-functional example of the chart.</p>
+          <script src="https://gist.github.com/davidjpfeiffer/dbd461f64e78d15c79023207e287f913.js"></script>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -204,7 +208,8 @@
           <h4 class="modal-title" id="polar-area-chart-code-modal-title">Polar Chart Code</h4>
         </div>
         <div class="modal-body">
-          ...
+          <p>This HTML file can be used with Chart JS to create a fully-functional example of the chart.</p>
+          <script src="https://gist.github.com/davidjpfeiffer/78b04914e8d1978a70a8164b535bbfac.js"></script>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -220,7 +225,8 @@
           <h4 class="modal-title" id="radar-chart-code-modal-title">Radar Chart Code</h4>
         </div>
         <div class="modal-body">
-          ...
+          <p>This HTML file can be used with Chart JS to create a fully-functional example of the chart.</p>
+          <script src="https://gist.github.com/davidjpfeiffer/7a374216316633db53fc3644c8613486.js"></script>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -228,7 +234,7 @@
       </div>
     </div>
   </div>
-  <!--build:js scripts/scripts.min.js async-->
+  <!--build:js scripts/scripts.min.js-->
   <script src="scripts/services/utility.service.js"></script>
   <script src="scripts/services/data.service.js"></script>
   <script src="scripts/chart.js"></script>
