Revise phrasing of slogan

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
   </nav>
   <header>
     <h1>Chart JS Examples</h1>
-    <p>A collection of Chart JS examples curated by David J Pfeiffer</p>
+    <p>A collection of Chart JS examples</p>
     <a href="https://github.com/davidjpfeiffer/chart-js-examples" class="btn btn-primary btn-lg">View on GitHub</a>
     <a href="https://github.com/davidjpfeiffer/chart-js-examples/zipball/master" class="btn btn-primary btn-lg">Download Zip</a>
   </header>
